[package]
name = "metadata"
version = "0.1.0"
edition = "2021"
authors = ["PCT <someemail@domain.com"]

[dependencies]
clap = {version = "*"}
hyper = "0.10"
# error-chain = "*"
serde = "*"
serde_yaml = "*"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
